[package]
name = "proksi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socks-rs = { path = "./socks-rs" }

[dependencies.tokio]
version = "1.23.0"
default-features = false
features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "macros"
]

[dependencies.dns-lookup]
version = "1.0.8"
optional = true

[dependencies.rand]
version = "0.8.5"
optional = true

[dev-dependencies.tokio]
version = "1.23.0"
features = [ "time", "process" ]

[workspace]
members = [
    "socks-rs"
]

[features]
default = ["dns-lookup", "bind"]
bind = ["rand"]