[package]
name = "proksi"
version = "0.1.0"
description = "A SOCKS5 server library"
readme = "README.md"
repository = "https://github.com/FallAngel1337/proksi.git"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socks-rs = { path = "./socks-rs" }
serde_json = "1.0"

[dependencies.tokio]
version = "1.23.0"
default-features = false
features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "macros"
]

[dependencies.dns-lookup]
version = "1.0.8"
optional = true

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies.tokio]
version = "1.23.0"
features = [ "time", "process" ]

[workspace]
members = [
    "socks-rs"
]

[features]
default = ["dns-lookup", "bind"]
bind = []
