[package]
name = "socks-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"

[dependencies.tokio]
version = "1.23.0"
default-features = false
features = [
    "net",
    "io-util",
    "rt"
]

[dependencies.serde]
version = "1.0"
features = [
    "derive"
] 

[dev-dependencies.tokio]
version = "1.23.0"
features = [
    "macros"
]