[package]
name = "socks-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.tokio]
version = "1.23.0"
default-features = false
features = [
    "net",
    "io-util",
    "rt",
    "sync",
    "macros"
]

[dev-dependencies.tokio]
version = "1.23.0"
features = [
    "macros",
    "time"
]