[package]
name = "socks-rs"
version = "0.1.0"
edition = "2021"
description = "SOCKS5 protocol implementation"
resolver = "2"
authors = [ "FallAngel<fallangel@protonmail.com>" ]
repository = "https://github.com/FallAngel1337/proksi.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]